--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,11 @@
 {
   "presets": [
-    "latest", { "modules": false },
+    [
+      "latest",
+      {
+        "es2015": { "modules": false }
+      }
+    ],
     "react",
     "stage-0"
   ]
