--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
     "flow-bin": "^0.40.0",
+    "html-webpack-plugin": "^2.28.0",
     "jest": "^19.0.2",
     "stylelint": "^7.9.0",
     "stylelint-config-standard": "^16.0.0",
