--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "Igor Goldvekht",
   "license": "MIT",
   "scripts": {
+    "start": "webpack-dev-server --env development --open",
+    "build": "webpack --env production",
     "lint:js": "eslint --ignore-path .gitignore -- .",
     "lint:css": "stylelint ./app/**/*.js",
     "flow": "flow",
