--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react": "^6.10.0",
     "html-webpack-plugin": "^2.28.0",
     "jest": "^19.0.2",
+    "nodemon": "^1.11.0",
     "stylelint": "^7.9.0",
     "stylelint-config-standard": "^16.0.0",
     "stylelint-processor-styled-components": "^0.0.4",
