--- a/package.json
+++ b/package.json
@@ -12,8 +12,17 @@
     "lint:js": "eslint --ignore-path .gitignore -- .",
     "lint:css": "stylelint ./app/**/*.js",
     "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll",
+    "precommit-msg": "echo 'Pre-commit checks...' && exit 0",
+    "lint-staged": "lint-staged"
   },
+  "lint-staged": {
+    "*.js": ["lint:js", "lint:css", "test"]
+  },
+  "pre-commit": [
+    "precommit-msg",
+    "lint-staged"
+  ],
   "devDependencies": {
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
@@ -29,7 +38,9 @@
     "eslint-plugin-react": "^6.10.0",
     "html-webpack-plugin": "^2.28.0",
     "jest": "^19.0.2",
+    "lint-staged": "^3.3.1",
     "nodemon": "^1.11.0",
+    "pre-commit": "^1.2.2",
     "stylelint": "^7.9.0",
     "stylelint-config-standard": "^16.0.0",
     "stylelint-processor-styled-components": "^0.0.4",
