--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "lint-staged": "lint-staged"
   },
   "lint-staged": {
-    "*.js": ["lint:js", "lint:css", "test"]
+    "*.js": [
+      "lint:js",
+      "lint:css",
+      "test"
+    ]
   },
   "pre-commit": [
     "precommit-msg",
@@ -46,5 +50,8 @@
     "stylelint-processor-styled-components": "^0.0.4",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
+  },
+  "dependencies": {
+    "styled-components": "^1.4.4"
   }
 }
