--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "next",
     "styled-components": "^1.4.4"
   }
 }
