--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
+    "css-loader": "^0.26.2",
     "eslint": "^3.17.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
@@ -45,6 +46,7 @@
     "lint-staged": "^3.3.1",
     "nodemon": "^1.11.0",
     "pre-commit": "^1.2.2",
+    "style-loader": "^0.13.2",
     "stylelint": "^7.9.0",
     "stylelint-config-standard": "^16.0.0",
     "stylelint-processor-styled-components": "^0.0.4",
