--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "start": "nodemon --watch webpack.config.babel.js --exec 'webpack-dev-server --env development'",
     "build": "webpack --env production",
-    "lint:js": "eslint --ignore-path .gitignore -- .",
-    "lint:css": "stylelint ./app/**/*.js",
+    "lint:js": "eslint --ignore-path .gitignore --",
+    "lint:css": "stylelint",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "precommit-msg": "echo 'Pre-commit checks...' && exit 0",
