--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
     "css-loader": "^0.26.2",
+    "enzyme": "^2.7.1",
     "eslint": "^3.17.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
@@ -46,6 +47,7 @@
     "lint-staged": "^3.3.1",
     "nodemon": "^1.11.0",
     "pre-commit": "^1.2.2",
+    "react-addons-test-utils": "^15.4.2",
     "style-loader": "^0.13.2",
     "stylelint": "^7.9.0",
     "stylelint-config-standard": "^16.0.0",
