--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,7 @@
 {
   "presets": [
-    ["latest", { "es2015": { "modules": false } }],
-    "react",
-    "stage-0"
+    ["env", { "modules": false }],
+    "react"
   ],
   "plugins": [
     "react-hot-loader/babel"
