--- a/package.json
+++ b/package.json
@@ -33,42 +33,41 @@
     ]
   },
   "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.3.2",
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "css-loader": "^0.26.2",
-    "enzyme": "^2.7.1",
-    "eslint": "^3.17.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.0",
-    "html-webpack-plugin": "^2.28.0",
-    "husky": "^0.13.2",
-    "jest": "^19.0.2",
-    "lint-staged": "^3.3.1",
-    "nodemon": "^1.11.0",
-    "react-addons-test-utils": "^15.4.2",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "enzyme": "^2.9.1",
+    "eslint": "^4.7.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-import-resolver-webpack": "^0.8.3",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
+    "html-webpack-plugin": "^2.30.1",
+    "husky": "^0.14.3",
+    "jest": "^21.1.0",
+    "lint-staged": "^4.2.1",
+    "nodemon": "^1.12.1",
+    "react-addons-test-utils": "^15.6.0",
     "react-hot-loader": "next",
-    "react-router-dom": "^4.0.0",
-    "react-test-renderer": "^15.4.2",
-    "style-loader": "^0.13.2",
-    "stylelint": "^7.9.0",
-    "stylelint-config-standard": "^16.0.0",
-    "stylelint-processor-styled-components": "^0.0.4",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "react-router-dom": "^4.2.2",
+    "react-test-renderer": "^15.6.1",
+    "style-loader": "^0.18.2",
+    "stylelint": "^8.1.1",
+    "stylelint-config-standard": "^17.0.0",
+    "stylelint-processor-styled-components": "^0.4.0",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.8.2"
   },
   "dependencies": {
-    "normalize.css": "^5.0.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-router": "^4.0.0",
-    "styled-components": "^1.4.4"
+    "normalize.css": "^7.0.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-router": "^4.2.0",
+    "styled-components": "^2.1.2"
   }
 }
