--- a/.eslintrc
+++ b/.eslintrc
@@ -55,7 +55,7 @@
   "settings": {
     "import/resolver": {
       "webpack": {
-        "config": "./config/webpack.config.babel.js"
+        "config": "./webpack.config.js"
       }
     }
   }
