--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "Igor Goldvekht",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --watch ./config/webpack.config.babel.js --exec 'webpack-dev-server --config ./config/webpack.config.babel.js --env development'",
-    "build": "webpack ---config ./config/webpack.config.babel.js -env production",
+    "start": "nodemon --watch ./webpack.config.js --exec 'webpack-dev-server --env development'",
+    "build": "webpack -env production",
     "lint:js": "eslint --ignore-path .gitignore --",
     "lint:css": "stylelint",
     "test": "jest",
