Use verbal error levels

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,40 +17,40 @@
     "sourceType": "module",
   },
   "rules": {
-    "arrow-body-style": [ 2, "as-needed" ],
+    "arrow-body-style": [ "error", "as-needed" ],
     "arrow-parens": [ "error", "always" ],
-    "class-methods-use-this": 0,
-    "comma-dangle": [ 2, "always-multiline" ],
-    "indent": [ 2, 2, { "SwitchCase": 1 } ],
-    "max-len": 0,
-    "newline-per-chained-call": 0,
-    "no-confusing-arrow": 0,
-    "no-console": 1,
-    "no-use-before-define": 0,
-    "prefer-template": 2,
-    "require-yield": 0,
+    "class-methods-use-this": "off",
+    "comma-dangle": [ "error", "always-multiline" ],
+    "indent": [ "error", 2, { "SwitchCase": 1 } ],
+    "max-len": "off",
+    "newline-per-chained-call": "off",
+    "no-confusing-arrow": "off",
+    "no-console": "warn",
+    "no-use-before-define": "off",
+    "prefer-template": "error",
+    "require-yield": "off",
     "semi": [ "error", "never" ],
-    "import/imports-first": 0,
-    "import/newline-after-import": 0,
-    "import/no-dynamic-require": 0,
-    "import/no-extraneous-dependencies": 0,
-    "import/no-named-as-default": 0,
-    "import/no-unresolved": 2,
-    "import/no-webpack-loader-syntax": 0,
-    "import/prefer-default-export": 0,
-    "jsx-a11y/aria-props": 2,
-    "jsx-a11y/heading-has-content": 0,
-    "jsx-a11y/href-no-hash": 2,
-    "jsx-a11y/label-has-for": 2,
-    "jsx-a11y/mouse-events-have-key-events": 2,
-    "jsx-a11y/role-has-required-aria-props": 2,
-    "jsx-a11y/role-supports-aria-props": 2,
-    "react/forbid-prop-types": 0,
-    "react/jsx-filename-extension": 0,
-    "react/jsx-first-prop-new-line": [ 2, "multiline" ],
-    "react/jsx-no-target-blank": 0,
-    "react/require-extension": 0,
-    "react/self-closing-comp": 0,
+    "import/imports-first": "off",
+    "import/newline-after-import": "off",
+    "import/no-dynamic-require": "off",
+    "import/no-extraneous-dependencies": "off",
+    "import/no-named-as-default": "off",
+    "import/no-unresolved": "error",
+    "import/no-webpack-loader-syntax": "off",
+    "import/prefer-default-export": "off",
+    "jsx-a11y/aria-props": "error",
+    "jsx-a11y/heading-has-content": "off",
+    "jsx-a11y/href-no-hash": "error",
+    "jsx-a11y/label-has-for": "error",
+    "jsx-a11y/mouse-events-have-key-events": "error",
+    "jsx-a11y/role-has-required-aria-props": "error",
+    "jsx-a11y/role-supports-aria-props": "error",
+    "react/forbid-prop-types": "off",
+    "react/jsx-filename-extension": "off",
+    "react/jsx-first-prop-new-line": [ "error", "multiline" ],
+    "react/jsx-no-target-blank": "off",
+    "react/require-extension": "off",
+    "react/self-closing-comp": "off",
   },
   "settings": {
     "import/resolver": {
