--- a/.stylelintrc
+++ b/.stylelintrc
@@ -3,6 +3,6 @@
   "extends": "stylelint-config-standard",
   "syntax": "scss",
   "rules": {
-    "rule-empty-line-before": "never"
+    "rule-empty-line-before": "always"
   }
 }
