--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
     "enzyme": "^2.9.1",
     "eslint": "^4.7.0",
