--- a/.eslintrc
+++ b/.eslintrc
@@ -55,7 +55,7 @@
   "settings": {
     "import/resolver": {
       "webpack": {
-        "config": "./webpack.config.js",
+        "config": "./webpack/webpack.config.babel.js",
       }
     }
   }
