--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "author": "Igor Goldvekht",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --watch ./webpack.config.js --exec 'webpack-dev-server --env development'",
-    "build": "webpack -env production",
-    "lint:js": "eslint --ignore-path .gitignore --",
+    "start": "nodemon --watch webpack --exec 'webpack-dev-server --env development --config ./webpack/webpack.config.babel.js'",
+    "build": "webpack -env production --config ./webpack/webpack.config.babel.js",
+    "lint:js": "eslint",
     "lint:css": "stylelint",
     "test": "jest",
     "test:watch": "jest --watchAll",
