Decouple eslint from webpack config
I would like for it to read the resolve config from webpack, but it's causing errors for the atom-eslint-linter

--- a/.eslintrc
+++ b/.eslintrc
@@ -54,8 +54,8 @@
   },
   "settings": {
     "import/resolver": {
-      "webpack": {
-        "config": "./webpack/webpack.config.babel.js",
+      "node": {
+        "paths": ["src", "node_modules"],
       }
     }
   }
