--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:css": "stylelint",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "test:coverage": "jest -- --coverage",
+    "test:coverage": "jest --coverage --",
     "precommit": "yarn lint-staged",
     "prepush": "yarn test",
     "lint-staged": "lint-staged"
