--- a/package.json
+++ b/package.json
@@ -38,12 +38,18 @@
     ]
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.1.0",
-    "babel-loader": "^7.1.2",
+    "@types/enzyme": "^3.1.6",
+    "@types/enzyme-adapter-react-16": "^1.0.1",
+    "@types/html-webpack-plugin": "^2.30.1",
+    "@types/jest": "^21.1.9",
+    "@types/node": "^8.5.2",
+    "@types/ramda": "^0.25.9",
+    "@types/react": "^16.0.31",
+    "@types/react-dom": "^16.0.3",
+    "@types/react-hot-loader": "^3.0.5",
+    "@types/react-router-dom": "^4.2.3",
+    "@types/webpack": "^3.8.1",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
     "enzyme": "^3.2.0",
@@ -67,6 +73,8 @@
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "^18.0.0",
     "stylelint-processor-styled-components": "^1.2.1",
+    "ts-loader": "^3.2.0",
+    "typescript": "^2.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
   },
