--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "nodemon --watch webpack --exec 'webpack-dev-server --env development --config ./webpack/webpack.config.babel.js'",
     "build": "webpack -env production --config ./webpack/webpack.config.babel.js",
-    "lint:js": "eslint",
+    "lint:ts": "tslint",
     "lint:css": "stylelint",
     "test": "jest",
     "test:watch": "jest --watchAll",
@@ -19,8 +19,11 @@
     "lint-staged": "lint-staged"
   },
   "lint-staged": {
-    "*.js": [
-      "lint:js",
+    "*.ts": [
+      "lint:ts"
+    ],
+    "*.tsx": [
+      "lint:ts",
       "lint:css"
     ]
   },
@@ -55,12 +58,6 @@
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.0",
-    "eslint": "^4.14.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
     "jest": "^22.0.4",
@@ -74,6 +71,7 @@
     "stylelint-config-standard": "^18.0.0",
     "stylelint-processor-styled-components": "^1.2.1",
     "ts-loader": "^3.2.0",
+    "tslint": "^5.8.0",
     "typescript": "^2.6.2",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
