--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "nodemon --watch webpack --exec 'webpack-dev-server --env development --config ./webpack/webpack.config.babel.js'",
     "build": "webpack -env production --config ./webpack/webpack.config.babel.js",
+    "lint:js": "eslint",
     "lint:ts": "tslint",
     "lint:css": "stylelint",
     "test": "jest",
@@ -19,6 +20,9 @@
     "lint-staged": "lint-staged"
   },
   "lint-staged": {
+    "*.js": [
+      "lint:js"
+    ],
     "*.ts": [
       "lint:ts"
     ],
@@ -64,12 +68,16 @@
     "@types/react-hot-loader": "^3.0.5",
     "@types/react-router-dom": "^4.2.3",
     "@types/webpack": "^3.8.1",
+    "babel-eslint": "^8.2.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.0",
+    "eslint": "^4.16.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
     "html-webpack-plugin": "^2.30.1",
     "husky": "^0.14.3",
     "jest": "^22.0.4",
