--- a/package.json
+++ b/package.json
@@ -57,52 +57,53 @@
     ]
   },
   "devDependencies": {
-    "@types/enzyme": "^3.1.6",
-    "@types/enzyme-adapter-react-16": "^1.0.1",
-    "@types/html-webpack-plugin": "^2.30.1",
-    "@types/jest": "^21.1.9",
+    "@types/enzyme": "^3.1.14",
+    "@types/enzyme-adapter-react-16": "^1.0.3",
+    "@types/html-webpack-plugin": "^3.2.0",
+    "@types/jest": "^23.3.5",
     "@types/node": "^8.5.2",
-    "@types/ramda": "^0.25.9",
-    "@types/react": "^16.0.31",
-    "@types/react-dom": "^16.0.3",
-    "@types/react-hot-loader": "^3.0.5",
-    "@types/react-router-dom": "^4.2.3",
-    "@types/webpack": "^3.8.1",
-    "babel-eslint": "^8.2.1",
-    "babel-preset-env": "^1.6.1",
+    "@types/ramda": "^0.25.39",
+    "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
+    "@types/react-hot-loader": "^4.1.0",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/styled-components": "^4.0.1",
+    "@types/webpack": "^4.4.17",
+    "babel-eslint": "^10.0.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.0",
-    "eslint": "^4.16.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "html-webpack-plugin": "^2.30.1",
-    "husky": "^0.14.3",
-    "jest": "^22.0.4",
-    "lint-staged": "^6.0.0",
-    "nodemon": "^1.14.3",
-    "react-hot-loader": "3.1.3",
-    "react-router-dom": "^4.2.2",
-    "react-test-renderer": "^16.2.0",
-    "style-loader": "^0.19.1",
-    "stylelint": "^8.4.0",
-    "stylelint-config-standard": "^18.0.0",
-    "stylelint-processor-styled-components": "^1.2.1",
-    "ts-jest": "^22.0.0",
-    "ts-loader": "^3.2.0",
-    "tslint": "^5.8.0",
-    "typescript": "^2.6.2",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.9.7"
+    "css-loader": "^1.0.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "enzyme-to-json": "^3.3.4",
+    "eslint": "^5.7.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.1.2",
+    "jest": "^23.6.0",
+    "lint-staged": "^7.3.0",
+    "nodemon": "^1.18.4",
+    "react-hot-loader": "4.3.11",
+    "react-router-dom": "^4.3.1",
+    "react-test-renderer": "^16.5.2",
+    "style-loader": "^0.23.1",
+    "stylelint": "^9.6.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-processor-styled-components": "^1.5.0",
+    "ts-jest": "^23.10.4",
+    "ts-loader": "^5.2.2",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.3",
+    "webpack": "^4.21.0",
+    "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
-    "normalize.css": "^7.0.0",
+    "normalize.css": "^8.0.0",
     "ramda": "^0.25.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-router": "^4.2.0",
-    "styled-components": "^2.4.0"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-router": "^4.3.1",
+    "styled-components": "^4.0.2"
   }
 }
