--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "author": "Igor Goldvekht",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --watch webpack --exec 'webpack-dev-server --env development --config ./webpack/webpack.config.babel.js'",
-    "build": "webpack -env production --config ./webpack/webpack.config.babel.js",
+    "start": "nodemon --watch webpack --exec 'NODE_ENV=development webpack-dev-server --config ./webpack/webpack.config.babel.js --hot'",
+    "build": "NODE_ENV=production webpack --config ./webpack/webpack.config.babel.js",
     "lint:js": "eslint",
     "lint:ts": "tslint",
     "lint:css": "stylelint",
