--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
   },
   "lint-staged": {
     "*.js": [
-      "lint:js"
+      "yarn lint:js"
     ],
     "*.ts": [
-      "lint:ts"
+      "yarn lint:ts"
     ],
     "*.tsx": [
-      "lint:ts",
-      "lint:css"
+      "yarn lint:ts",
+      "yarn lint:css"
     ]
   },
   "moduleRoots": [
@@ -69,7 +69,9 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/styled-components": "^4.0.1",
     "@types/webpack": "^4.4.17",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^1.0.0",
@@ -96,6 +98,7 @@
     "tslint": "^5.11.0",
     "typescript": "^3.1.3",
     "webpack": "^4.21.0",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
