--- a/webpack/.eslintrc.yml
+++ b/webpack/.eslintrc.yml
@@ -8,6 +8,7 @@ env:
 parserOptions:
   ecmaFeatures:
     jsx: true
+    experimentalObjectRestSpread: true
   ecmaVersion: 6
   sourceType: module
 rules:
