Add esModuleInterop because of reasons
https://github.com/airbnb/enzyme/issues/1284\#issuecomment-429863670

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "checkJs": true,
     "strict": true,
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "jsx": "react",
     "module": "es2015",
     "target": "es5",
