--- a/package.json
+++ b/package.json
@@ -104,7 +104,8 @@
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
-    "normalize.css": "^8.0.0",
+    "@material-ui/core": "^3.3.1",
+    "@material-ui/icons": "^3.0.1",
     "ramda": "^0.25.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
