--- a/.stylelintrc
+++ b/.stylelintrc
@@ -3,7 +3,7 @@
   "extends": "stylelint-config-standard",
   "syntax": "scss",
   "rules": {
-    "rule-empty-line-before": "always",
+    "rule-empty-line-before": null,
     "no-empty-source": null
   }
 }
