--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "transform": {
       ".tsx?$": "ts-jest"
     },
-    "setupTestFrameworkScriptFile": "./tools/setupTests.ts",
+    "setupTestFrameworkScriptFile": "./config/setupTests.ts",
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
